AUTO_FILES("." "src" "\\.(cpp|h)$")
if(MSVC_VERSION LESS 1600)
  AUTO_FILES("${ROOT_SOURCE_DIR}/msvc" "src" "\\.h$")
endif()
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/capstone/include" "src" "\\.h$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/capstone" "src" "capstone/[^/]+\\.(c|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/capstone/arch/ARM" "src" "\\.(c|h|inc)$")
include_directories(${DEP_INCLUDE_DIR} "${ROOT_SOURCE_DIR}/dep/capstone/include")
if(MSVC_VERSION LESS 1600)
  include_directories("${ROOT_SOURCE_DIR}/msvc")
endif()
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -DCAPSTONE_USE_SYS_DYN_MEM -DCAPSTONE_HAS_ARM)
ADD_EXE(gbadisasm "${src}")
install(TARGETS gbadisasm DESTINATION bin)
